# Prot2Prop

./: .gitignore  README.md  aggregate_data.py  calibration.py  config.py  ensemble_validate.py  evolutionary_alignment_loss.py  inference.py  model.py  pyproject.toml  tokenize_data.py  train.py  validate.py
proteingym_manifests/: activity.csv  binding.csv  binding_affinity.csv  enzymatic_activity.csv  expression.csv  stability.csv
scripts/: build_folding_stability_evo_targets.py  plot_results.py  run_onehot_linear_baseline.py
